Sprint039|ALPHA-598|Add pickup places and fix inactive voucher position on mobile

--- a/app/styles/containers/cart/_index.scss
+++ b/app/styles/containers/cart/_index.scss
@@ -691,9 +691,10 @@
   font-family: $font-family-open-sans;
   font-size: 12px;
   width: calc(100% - 8rem);
+  flex-wrap: wrap;
 
-  > span:last-child {
-    padding: 0 1rem;
+  > span {
+    padding-right: 1rem;
   }
 
   > span.atm-cart-price {
